# example-esp32-gatt-standalone

./: Makefile  README.rst  sdkconfig  sdkconfig.old
.devcontainer/: Dockerfile  devcontainer.json
doc/: example_gatt_icd.html  example_live_icd.html
icd/: example_gatt_icd.html  example_live_icd.html
main/: gatts_table_creat_demo.c  gatts_table_creat_demo.h
main/gatt/: CMakeLists.txt  app_bat_svc.c  app_dvc_svc.c  app_ota_svc.c  app_spr_svc.c  component.mk  example_gatt_server.c  example_gatt_server.h
main/gatt/svc/: bat_svc.c  bat_svc.h  dvc_svc.c  dvc_svc.h  ota_svc.c  ota_svc.h  spr_svc.c  spr_svc.h
